After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708288 - Force unmount call doesn't do anything
Force unmount call doesn't do anything
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: afc backend and volume monitor
git master
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-18 13:32 UTC by Bastien Nocera
Modified: 2015-03-10 10:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
afc: Fix force unmount of devices (2.39 KB, patch)
2015-03-09 17:10 UTC, Christophe Fergeau
committed Details | Review

Description Bastien Nocera 2013-09-18 13:32:46 UTC
After unplugging an iOS device, the mount is still there because gvfsd-afc doesn't exit. It seems that the call to g_vfs_backend_force_unmount() doesn't do anything.
Comment 1 Bastien Nocera 2013-09-20 14:26:56 UTC
the gphoto2 backend would likely have the same problem if you used this patch:
https://bugzilla.gnome.org/show_bug.cgi?id=708316
Comment 2 Bastien Nocera 2014-06-03 14:42:47 UTC
I've committed a work-around for this:

commit 28cb50541ffd369cd8f7630575a02c12e1cb42fc
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Jun 3 16:40:22 2014 +0200

    afc: Work-around mounts not disappearing when disconnecting device
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=708288
Comment 3 Christophe Fergeau 2015-03-09 17:10:56 UTC
Created attachment 298902 [details] [review]
afc: Fix force unmount of devices

The exit(1) workaround does not work for me (f21 gvfs package) when unplugging a gvfs-mounted ipod touch without unmounting it first (the gvfsd-afc process is still alive). The attached patch works for me in this scenario.
Comment 4 Bastien Nocera 2015-03-09 17:13:31 UTC
Comment on attachment 298902 [details] [review]
afc: Fix force unmount of devices

Yes! And to the stable branches as well please.
Comment 5 Christophe Fergeau 2015-03-10 10:28:16 UTC
Pushed as commit 32adf492a9 and to the gnome-3-14 branch. There was a conflict when trying to cherry-pick to the gnome-3-12 branch (probably not too hard to solve), just let me know if you want it there too.