afc: Work-around mounts not disappearing when disconnecting device

See https://bugzilla.gnome.org/show_bug.cgi?id=708288